# bayesian-shelf-life-arrhenius

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-DATA  README.md  pyproject.toml
paper_a/: __init__.py  pytest.ini
paper_a/analysis/: __init__.py  aggregation.py  bootstrap_ci.py  figures.py  metrics.py  reaggregate.py  run_paper_a.py
paper_a/analysis/estimators/: __init__.py  base.py  classical_ich_q1e.py  classical_ols_multi_temp.py  mcmc.py  two_stage_conjugate.py
paper_a/analysis/loaders/: __init__.py  published.py  synthetic.py
paper_a/analysis/sensitivity/: __init__.py  t_correction.py
paper_a/data/core/: truth.json
paper_a/data/robustness/: long_term_25c.csv  truth.json
paper_a/datagen/: __init__.py  __main__.py  config.py  generate.py  kinetics.py  temperature.py
paper_a/docs/: confirmed_parameters.md
paper_a/results/: bootstrap_ci.json  cell_metrics.json
paper_a/tests/: test_bootstrap_ci.py  test_datagen.py  test_faya_subset.py  test_mcmc.py  test_metrics.py
